# generics

./: .gitattributes  README.md  dune-project  generics-core.opam  generics.opam
.github/workflows/: test.yml
core/: dune
lib/: dune  eq.ml  genOrd.ml  generic.ml  memo.ml  ord.ml  show.ml
tests/: test.ml
